--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,5 +32,10 @@ jobs:
           git clone https://github.com/TonyCrane/mkdocs-toolchain
           pip install mkdocs-toolchain/mkdocs-toc-plugin
           rm -rf mkdocs-toolchain
+      - name: Install modified mkdocs-statistics-plugin
+        run: |
+          git clone https://github.com/KinnariyaMamaTanha/mkdocs-statistics-plugin
+          pip install ./mkdocs-statistics-plugin
+          rm -rf mkdocs-statistics-plugin
       - run: pip cache purge
       - run: mkdocs gh-deploy --force
