--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ mkdocs-git-revision-date-localized-plugin
 mkdocs-glightbox
 mkdocs-video
 # mkdocs-rss-plugin
-rich # for mkdocs-toc-plugin
+# rich # for mkdocs-toc-plugin
