--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -155,13 +155,13 @@ extra_javascript:
   - https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js
   # - https://busuanzi.icodeq.com/busuanzi.pure.mini.js
   - js/mathjax.js
-  - js/toc.js
+  # - js/toc.js
 
 extra_css:
   - css/custom.css
   - https://gcore.jsdelivr.net/npm/lxgw-wenkai-screen-webfont@1.1.0/style.css
   - https://gcore.jsdelivr.net/npm/lxgw-wenkai-webfont@1.1.0/style.css
-  - css/fold_toc.css
+  # - css/fold_toc.css
   - css/card.css
   - css/flink.css
   - css/tasklist.css
@@ -216,6 +216,9 @@ nav:
           - "2 C Intro": notes/cs61c/2-c-intro.md
           - "3 Floating Point": notes/cs61c/3-floating-point.md
           - "4 RISC-V Basic": notes/cs61c/4-RISC-V.md
+          - "5 CALL": notes/cs61c/5-CALL.md
+          - "6 Processor Design": notes/cs61c/6-processor-design.md
+          - "7 Pipeline": notes/cs61c/7-pipeline.md
   - Blogs:
       - index: blogs/index.md
   - Summaries:
