--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -320,6 +320,7 @@ nav:
       - bision debug: blogs/posts/bision debug.md
       - Bustub 通关指北: blogs/bustub通关指北.md
       - C++ 异步方案演进: blogs/C++异步方案.md
+      - 并发组件实现浅析: blogs/Implement of Concurrent.md
       - linux tolls:
           - "grep": blogs/linux tools/1-grep.md
           - "sed": blogs/linux tools/2-sed.md
