--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -326,10 +326,10 @@ nav:
               - week1-week2: blogs/posts/ospp-nebula/plans/week1-week2.md
               - week3-week4: blogs/posts/ospp-nebula/plans/week3-week4.md
               - week5-week6: blogs/posts/ospp-nebula/plans/week5-week6.md
-
           - Implement:
-              - vector type implement: blogs/posts/ospp-nebula/implements/vector type implement.md
-      - linux tolls:
+              - week1-week2: blogs/posts/ospp-nebula/plans/week1-week2-finished.md
+          - UnderStanding:
+              - A Life of KV Pairs: blogs/posts/ospp-nebula/understandings/a kv life.md
           - "grep": blogs/linux tools/1-grep.md
           - "sed": blogs/linux tools/2-sed.md
           - "awk": blogs/linux tools/3-awk.md
