--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -334,7 +334,8 @@ nav:
           - "find": blogs/linux tools/4-find.md
       - vector search papers:
           - "LSM-VEC": blogs/paper notes/vector search/LSM-VEC.md
-          - "Acceleratin Graph Indexing for ANNs on Modern CPUs": blogs/paper notes/vector search/Acceleratin Graph Indexing for ANNs on Modern CPUs.md
+          - "iQAN": blogs/paper notes/vector search/IQAN.md
+
   - Summaries:
       - index: summary/index.md
       - "2025":
