--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -313,12 +313,6 @@ nav:
       - C++ 异步方案演进: blogs/C++异步方案.md
       - 并发组件实现浅析: blogs/Implement of Concurrent.md
       - ospp-nebula:
-          - Plan:
-              - week1-week2: blogs/posts/ospp-nebula/plans/week1-week2.md
-              - week3-week4: blogs/posts/ospp-nebula/plans/week3-week4.md
-              - week5-week6: blogs/posts/ospp-nebula/plans/week5-week6.md
-          - Implement:
-              - week1-week2: blogs/posts/ospp-nebula/plans/week1-week2-finished.md
           - UnderStanding:
               - Vistor Pattern in nebula: notes/nebula/1.visitor pattern.md
               - Memory Management in nebula: notes/nebula/2.memory management.md
@@ -328,6 +322,11 @@ nav:
               - Raft Wal in Nebula: notes/nebula/6.raft-wal.md
               - How to Modify nGQL: notes/nebula/7.how to modify sql.md
               - A Life of KV Pairs: blogs/posts/ospp-nebula/understandings/a kv life.md
+          - Implement:
+              - DDL for VECTOR Type: blogs/posts/ospp-nebula/implements/DDL for vector type.md
+              - DML for VECTOR Type: blogs/posts/ospp-nebula/implements/DML for vector type.md
+              - Match for VECTOR Type: blogs/posts/ospp-nebula/implements/Match for vector property.md
+      - Linux Tools:
           - "grep": blogs/linux tools/1-grep.md
           - "sed": blogs/linux tools/2-sed.md
           - "awk": blogs/linux tools/3-awk.md
