mkdocs display fixed
Signed-off-by: Zhi Yiliu <2584074296@qq.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Want to be a DB wizard
+site_name: Want to be a MlSys wizard
 site_author: tom-jerr
 site_url: https://tom-jerr.github.io
 site_description: Experience the journey of a database wizard, from the basics to advanced topics.
