--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -320,9 +320,10 @@ nav:
       - index: blogs/index.md
       - LLM Inference:
           - Introduction for LLM Inference: blogs/llm_inference/Introduction.md
-          - Parallelizatoin in ML System: blogs/llm_inference/parallelization.md
-          - PageAttention: blogs/llm_inference/pageattention.md
           - CUDA Optimization: blogs/llm_inference/cudaopt.md
+          - Parallelizatoin in ML System: blogs/llm_inference/parallelization.md
+          - Parallelization in LLM Inference: blogs/llm_inference/LLMparallelization.md
+          - PageAttention: blogs/llm_inference/pageattention.md
       - nebula:
           - Vistor Pattern in nebula: projects/nebula-vsearch/understanding/1.visitor pattern.md
           - Memory Management in nebula: projects/nebula-vsearch/understanding/2.memory management.md
